create employee flight details
